# Plus-Map

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md
backend/: alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  db.py  deps.py  logging.py  logging_middleware.py  main.py  migrations_runner.py  rls.py
backend/app/admin_ui/: __init__.py  auth.py  context.py  setup.py  views.py
backend/app/auth/: __init__.py  backend.py  mail.py  manager.py  routes.py  schemas.py
backend/app/models/: __init__.py  application.py  base.py  catalog.py  event.py  person.py  user.py
backend/app/routes/: __init__.py  admin.py  applications.py  catalog.py  events.py  exports.py  geocode.py  glyphs.py  persons.py  search.py  tiles.py
backend/app/schemas/: __init__.py  admin.py  application.py  catalog.py  common.py  event.py  person.py  search.py
backend/app/security/: __init__.py  csrf.py
backend/app/seeds/: __init__.py  equipment_items.py  positions.py  restraint_types.py  run.py
backend/app/services/: __init__.py  applications.py  catalog.py  events.py  exports.py  masking.py  person_merge.py  persons.py  plus_code.py  search.py
backend/app/sync/: __init__.py  routes.py  schemas.py  services.py
backend/migrations/: env.py
backend/migrations/versions/: 20260425_1700_initial_schema.py  20260425_1730_strict_rls_policies.py  20260426_1800_m5b1_sync_columns.py  20260426_1830_m5b2_sync_owner_select.py  20260427_1900_m5c1b_ep_sync.py  20260428_1200_m7_1_catalog_workflow.py  (+5 more)
backend/scripts/: bootstrap_admin.py  seed_plus_map.py
backend/tests/: api_helpers.py  conftest.py  test_admin_routes.py  test_admin_ui.py  test_applications_api.py  test_applications_list_api.py  test_applications_live_api.py  test_auth.py  test_auth_mail.py  test_catalog_api.py  test_catalog_workflow.py  test_events_api.py  test_events_live_api.py  test_geocode_proxy.py  test_health.py  test_logging_middleware.py  test_migration.py  test_migrations_runner.py  test_models.py  test_persons_api.py  test_persons_quick_api.py  test_rbac.py  test_rls.py  test_rxdb_schema_drift.py  test_search_export_api.py  test_seeds.py  test_soft_delete_filter.py  test_sync_api.py  test_sync_application_restraints.py  test_sync_applications.py  test_sync_columns_migration.py  test_sync_conflict_resolution.py  test_sync_event_participants.py  test_sync_idempotency.py  test_sync_rls.py  test_tiles_proxy.py
(+201 files in other folders)
