[project]
name = "hc-map-backend"
version = "0.0.0"
description = "HC-Map backend (FastAPI). Self-hosted, geo-referenced bondage event log."
requires-python = ">=3.12,<3.13"
license = "AGPL-3.0-only"
dependencies = [
    "fastapi>=0.136,<0.137",
    "uvicorn[standard]>=0.46,<0.47",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "structlog>=25,<26",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "alembic>=1.14,<2",
    "asyncpg>=0.31,<0.32",
    "psycopg[binary]>=3.2,<4",
    "geoalchemy2>=0.19,<0.20",
    "uuid-utils>=0.14,<0.15",
    "fastapi-users[sqlalchemy]>=15,<16",
    "argon2-cffi>=25,<26",
    "pyjwt>=2.10,<3",
    "email-validator>=2.2,<3",
    "openlocationcode>=1.0,<2",
    "httpx>=0.28,<0.29",
    "sqladmin>=0.25,<0.26",
    "itsdangerous>=2.2,<3",
    "aiosmtplib>=5,<6",
]

[dependency-groups]
dev = [
    "ruff>=0.15,<0.16",
    "mypy>=1.13,<2",
    "pytest>=9,<10",
    "pytest-asyncio>=1,<2",
    "testcontainers[postgresql]>=4.8,<5",
    "coverage>=7.13.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle / pyflakes
    "I",                  # isort
    "B",                  # bugbear
    "UP",                 # pyupgrade
    "SIM",                # simplify
    "RUF",                # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
# FastAPI dependency-injection pattern uses Depends() as default value.
"app/deps.py" = ["B008"]
"app/auth/manager.py" = ["B008"]
"app/routes/*.py" = ["B008"]
"app/sync/routes.py" = ["B008"]
# SQLAdmin's ModelView API requires column lists as plain class attributes;
# RUF012 (mutable default) does not apply to declarative-style frameworks.
"app/admin_ui/views.py" = ["RUF012"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "openlocationcode.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
